--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+
 <html>
     <head>
-        <title>Title</title>
+        <title>Egeez</title>
         <style type="text/css">
             body {
                 font-weight: 200;
@@ -19,35 +19,36 @@
                /* text-align: right;*/
                padding: 10px 20px 0px 20px;  
             }
+            table{
+                width:100%;
+            }
+            table, th, td {
+                border: 1px solid black;
+                border-collapse: collapse;
+            }
             .title span {
                 color: #007cae;
-            }
-            .details {
-                padding: 10px 20px 0px 20px;
-                text-align: left !important;
-                /*margin-left: 40%;*/
-            }
-            .hrItem {
-                border: none;
-                height: 1px;
-                /* Set the hr color */
-                color: #333; /* old IE */
-                background-color: #fff; /* Modern Browsers */
             }
         </style>
     </head>
     <body>
         <div class='wrapper'>
             <div class='header'>
-                <p class='title'>Invoice # </p>
+                <p class='title'>Category</p>
             </div>
         <div>
-        <div class='details'>
-            Bill to: <br/>
-            Amount:  <br/>
-            Date: 
-            <hr class='hrItem' />
-        </div>
-    </div>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Descripiton</th>
+                </tr>
+            
+                {% for cat in category %}
+                <tr>
+                    <td> {{cat.category_name}}</td>
+                    <td>{{cat.description}}</td>
+                </tr>
+                {% endfor %}
+            </table>
     </body>
 </html>
